Fix mobile and dropdown nav for IE 10/11
- update js
- add bottom border to annoucement
- fix scrollbars on IE

--- a/src/assets/scss/components/_announcement-bar.scss
+++ b/src/assets/scss/components/_announcement-bar.scss
@@ -2,6 +2,7 @@
 
 .sqs-announcement-bar-content {
     background-color: $secondary-color;
+    border-bottom: 1px solid rgba(0,0,0,.05);
 
     .sqs-announcement-bar-text {
         margin-right: 2rem;
